# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2008 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.465.2.66 2008-02-01 12:22:27 martin Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (GPL). If you
# did not receive this file, see http://www.gnu.org/licenses/gpl-2.0.txt.
# --
2.2.6 (2008/??/??)
 - (2008/02/01) Fixed ticket# 2008012242000417 - View performance problems
    if more then 1000 customer companies are in the database available.

2.2.5 (2008/01/28)
 - (2008/01/25) Fixed bug# 2645 - SLA selection doesn't change when customer is
    changed.
 - (2008/01/16) Fixed bug# 2157 - Ticket merged note not translated.
 - (2008/01/15) Fixed bug# 2392 - Charset problems with iso8859 and the
    xml-caching mechanism.
 - (2008/01/15) Implemented workaround for bug# 2227 - XMLHashSearch returns
    no values on MS SQL in certain cases.
 - (2008/01/14) Fixed bug# 2330 - Cron.sh start <OTRS_USER> does not work.
    Thanks to Felix J. Ogris.
 - (2008/01/14) Fixed bug# 977 - No agent notification for new ticket from
    webinterface if CustomerGroupSupport is enabled.
 - (2008/01/13) Added new vietnam translation, thanks to Nguyen Nguyet. Phuong!
 - (2008/01/13) Fixed bug# 2621 - Wrong order of items (Subject,Service,SLA,Body
    -> Service,SLA,Subject,Body) in Frontend AgentTicketPhone, AgentTicketEmail
    and CustomerTicketMessage.
 - (2008/01/12) Fixed bug# 1687 - Wrong "New message!" hint on queue with
    "Customer State Notify" activated.
 - (2008/01/09) Fixed bug# 2613 - Images are broken in Lite-Theme if OTRS do
    not use the default Alias /otrs-web/.
 - (2008/01/08) Improved Kernel::System::XML::XMLParse() to prevent bugs
    like# 2612.
 - (2008/01/08) Fixed bug# 2609 - Temp files are not removed after process was
    finished under windows.
 - (2008/01/07) Fixed bug# 1893 - Attachement Storage fails with
    ArticleStorageFS in win32 with ? in filenames.