@@ -1,12 +1,12 @@
 # --
 # Time.t - Time tests
-# Copyright (C) 2001-2007 OTRS GmbH, http://otrs.org/
+# Copyright (C) 2001-2008 OTRS AG, http://otrs.org/
 # --
-# $Id: Time.t,v 1.11.2.1 2007-11-06 10:38:18 martin Exp $
+# $Id: Time.t,v 1.11.2.2 2008-02-06 22:55:50 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (GPL). If you
-# did not receive this file, see http://www.gnu.org/licenses/gpl.txt.
+# did not receive this file, see http://www.gnu.org/licenses/gpl-2.0.txt.
 # --
 
 use Kernel::System::Time;
@@ -239,212 +239,212 @@ $Self->Is(
     'WorkingHours - Mon-Mon',
 );
 
-my $SystemTimeDestination = $Self->{TimeObject}->TimeStamp2SystemTime(
-    String => '2006-11-12 10:15:00',
-);
-my $DestinationTime = $Self->{TimeObject}->DestinationTime(
-    StartTime => $SystemTimeDestination,
-    Time => 60*60*4,
-);
-($Sec, $Min, $Hour, $Day, $Month, $Year) = $Self->{TimeObject}->SystemTime2Date(
-    SystemTime => $DestinationTime,
-);
-$Self->Is(
-    "$Year-$Month-$Day $Hour:$Min:$Sec",
-    '2006-11-13 12:00:00',
-    'DestinationTime()',
-);
-
-$SystemTimeDestination = $Self->{TimeObject}->TimeStamp2SystemTime(
-    String => '2006-11-13 10:15:00',
-);
-$DestinationTime = $Self->{TimeObject}->DestinationTime(
-    StartTime => $SystemTimeDestination,
-    Time => 60*60*4,
-);
-($Sec, $Min, $Hour, $Day, $Month, $Year) = $Self->{TimeObject}->SystemTime2Date(
-    SystemTime => $DestinationTime,
-);
-$Self->Is(
-    "$Year-$Month-$Day $Hour:$Min:$Sec",
-    '2006-11-13 14:15:00',
-    'DestinationTime()',
-);
-
-$SystemTimeDestination = $Self->{TimeObject}->TimeStamp2SystemTime(
-    String => '2006-11-13 10:15:00',
-);
-$DestinationTime = $Self->{TimeObject}->DestinationTime(
-    StartTime => $SystemTimeDestination,
-    Time => 60*60*11,
-);
-($Sec, $Min, $Hour, $Day, $Month, $Year) = $Self->{TimeObject}->SystemTime2Date(
-    SystemTime => $DestinationTime,
-);
-$Self->Is(
-    "$Year-$Month-$Day $Hour:$Min:$Sec",
-    '2006-11-14 08:15:00',
-    'DestinationTime()',
-);
-
-$SystemTimeDestination = $Self->{TimeObject}->TimeStamp2SystemTime(
-    String => '2006-12-31 10:15:00',
-);
-$DestinationTime = $Self->{TimeObject}->DestinationTime(
-    StartTime => $SystemTimeDestination,
-    Time => 60*60*11,
-);
-($Sec, $Min, $Hour, $Day, $Month, $Year) = $Self->{TimeObject}->SystemTime2Date(
-    SystemTime => $DestinationTime,
-);
-$Self->Is(
-    "$Year-$Month-$Day $Hour:$Min:$Sec",
-    '2007-01-02 19:00:00',
-    'DestinationTime()',
-);
-
-$SystemTimeDestination = $Self->{TimeObject}->TimeStamp2SystemTime(
-    String => '2006-12-29 10:15:00',
-);
-$DestinationTime = $Self->{TimeObject}->DestinationTime(
-    StartTime => $SystemTimeDestination,
-    Time => 60*60*11,
-);
-($Sec, $Min, $Hour, $Day, $Month, $Year) = $Self->{TimeObject}->SystemTime2Date(
-    SystemTime => $DestinationTime,
-);
-$Self->Is(
-    "$Year-$Month-$Day $Hour:$Min:$Sec",
-    '2007-01-02 08:15:00',
-    'DestinationTime()',
-);
-
-$SystemTimeDestination = $Self->{TimeObject}->TimeStamp2SystemTime(
-    String => '2006-12-30 10:45:00',
-);
-$DestinationTime = $Self->{TimeObject}->DestinationTime(
-    StartTime => $SystemTimeDestination,
-    Time => 60*60*11,
-);
-($Sec, $Min, $Hour, $Day, $Month, $Year) = $Self->{TimeObject}->SystemTime2Date(
-    SystemTime => $DestinationTime,
-);
-$Self->Is(
-    "$Year-$Month-$Day $Hour:$Min:$Sec",
-    '2007-01-02 19:00:00',
-    'DestinationTime()',
-);
-
-$SystemTimeDestination = $Self->{TimeObject}->TimeStamp2SystemTime(
-    String => '2006-12-06 07:50:00',
-);
-$DestinationTime = $Self->{TimeObject}->DestinationTime(
-    StartTime => $SystemTimeDestination,
-    Time => $WorkingTime12,
-);
-($Sec, $Min, $Hour, $Day, $Month, $Year) = $Self->{TimeObject}->SystemTime2Date(
-    SystemTime => $DestinationTime,
-);
-$Self->Is(
-    "$Year-$Month-$Day $Hour:$Min:$Sec",
-    '2006-12-07 08:54:00',
-    'DestinationTime()',
-);
-
-$SystemTimeDestination = $Self->{TimeObject}->TimeStamp2SystemTime(
-    String => '2007-01-16 20:15:00',
-);
-$DestinationTime = $Self->{TimeObject}->DestinationTime(
-    StartTime => $SystemTimeDestination,
-    Time => 60*60*1.25,
-);
-($Sec, $Min, $Hour, $Day, $Month, $Year) = $Self->{TimeObject}->SystemTime2Date(
-    SystemTime => $DestinationTime,
-);
-$Self->Is(
-    "$Year-$Month-$Day $Hour:$Min:$Sec",
-    '2007-01-17 08:30:00',
-    'DestinationTime()',
-);
-
-$SystemTimeDestination = $Self->{TimeObject}->TimeStamp2SystemTime(
-    String => '2007-03-14 21:21:02',
-);
-$DestinationTime = $Self->{TimeObject}->DestinationTime(
-    StartTime => $SystemTimeDestination,
-    Time => 60*60,
-);
-($Sec, $Min, $Hour, $Day, $Month, $Year) = $Self->{TimeObject}->SystemTime2Date(
-    SystemTime => $DestinationTime,
-);
-$Self->Is(
-    "$Year-$Month-$Day $Hour:$Min:$Sec",
-    '2007-03-15 09:00:00',
-    'DestinationTime()',
-);
-
-$SystemTimeDestination = $Self->{TimeObject}->TimeStamp2SystemTime(
-    String => '2007-03-12 11:56:01',
-);
-$DestinationTime = $Self->{TimeObject}->DestinationTime(
-    StartTime => $SystemTimeDestination,
-    Time => 60*60*2,
-);
-($Sec, $Min, $Hour, $Day, $Month, $Year) = $Self->{TimeObject}->SystemTime2Date(
-    SystemTime => $DestinationTime,
-);
-$Self->Is(
-    "$Year-$Month-$Day $Hour:$Min:$Sec",
-    '2007-03-12 13:56:01',
-    'DestinationTime()',
-);
-
-$SystemTimeDestination = $Self->{TimeObject}->TimeStamp2SystemTime(
-    String => '2007-03-15 17:21:27',
-);
-$DestinationTime = $Self->{TimeObject}->DestinationTime(
-    StartTime => $SystemTimeDestination,
-    Time => 60*60*3,
-);
-($Sec, $Min, $Hour, $Day, $Month, $Year) = $Self->{TimeObject}->SystemTime2Date(
-    SystemTime => $DestinationTime,
-);
-$Self->Is(
-    "$Year-$Month-$Day $Hour:$Min:$Sec",
-    '2007-03-15 20:21:27',
-    'DestinationTime()',
+# DestinationTime tests
+my @DestinationTime = (
+    {
+        Name => 'Test 1',
+        StartTime => '2006-11-12 10:15:00',
+        StartTimeSystem => '',
+        Diff => 60*60*4,
+        EndTime => '2006-11-13 12:00:00',
+        EndTimeSystem => '',
+    },
+    {
+        Name => 'Test 2',
+        StartTime => '2006-11-13 10:15:00',
+        StartTimeSystem => '',
+        Diff => 60*60*4,
+        EndTime => '2006-11-13 14:15:00',
+        EndTimeSystem => '',
+    },
+    {
+        Name => 'Test 3',
+        StartTime => '2006-11-13 10:15:00',
+        StartTimeSystem => '',
+        Diff => 60*60*11,
+        EndTime => '2006-11-14 08:15:00',
+        EndTimeSystem => '',
+    },
+    {
+        Name => 'Test 4',
+        StartTime => '2006-12-31 10:15:00',
+        StartTimeSystem => '',
+        Diff => 60*60*11,
+        EndTime => '2007-01-02 19:00:00',
+        EndTimeSystem => '',
+    },
+    {
+        Name => 'Test 5',
+        StartTime => '2006-12-29 10:15:00',
+        StartTimeSystem => '',
+        Diff => 60*60*11,
+        EndTime => '2007-01-02 08:15:00',
+        EndTimeSystem => '',
+    },
+    {
+        Name => 'Test 6',
+        StartTime => '2006-12-30 10:45:00',
+        StartTimeSystem => '',
+        Diff => 60*60*11,
+        EndTime => '2007-01-02 19:00:00',
+        EndTimeSystem => '',
+    },
+    {
+        Name => 'Test 7',
+        StartTime => '2006-12-06 07:50:00',
+        StartTimeSystem => '',
+        Diff => $WorkingTime12,
+        EndTime => '2006-12-07 08:54:00',
+        EndTimeSystem => '',
+    },
+    {
+        Name => 'Test 8',
+        StartTime => '2007-01-16 20:15:00',
+        StartTimeSystem => '',
+        Diff => 60*60*1.25,
+        EndTime => '2007-01-17 08:30:00',
+        EndTimeSystem => '',
+    },
+    {
+        Name => 'Test 9',
+        StartTime => '2007-03-14 21:21:02',
+        StartTimeSystem => '',
+        Diff => 60*60,
+        EndTime => '2007-03-15 09:00:00',
+        EndTimeSystem => '',
+    },
+    {
+        Name => 'Test 10',
+        StartTime => '2007-03-12 11:56:01',
+        StartTimeSystem => '',
+        Diff => 60*60*2,
+        EndTime => '2007-03-12 13:56:01',
+        EndTimeSystem => '',
+    },
+    {
+        Name => 'Test 11',
+        StartTime => '2007-03-15 17:21:27',
+        StartTimeSystem => '',
+        Diff => 60*60*3,
+        EndTime => '2007-03-15 20:21:27',
+        EndTimeSystem => '',
+    },
+# Summertime test - switch back to winter time (without + 60 minutes)
+    {
+        Name => 'Test summertime -> wintertime (prepare without +60 min)',
+        StartTime => '2007-10-19 18:12:23',
+        StartTimeSystem => 1192810343,
+        Diff => 60*60*5.5,
+        EndTime => '2007-10-22 10:42:23',
+        EndTimeSystem => 1193042543,
+    },
+# Summertime test - switch back to winter time (+ 60 minutes)
+    {
+        Name => 'Test summertime -> wintertime (+60 min)',
+        StartTime => '2007-10-26 18:12:23',
+        StartTimeSystem => '1193415143',
+        Diff => 60*60*5.5,
+        EndTime => '2007-10-29 10:42:23',
+        EndTimeSystem => 1193650943,
+    },
+# Summertime test - switch back to winter time (without + 60 minutes)
+    {
+        Name => 'Test summertime -> wintertime (prepare without +60 min)',
+        StartTime => '2007-10-19 18:12:23',
+        StartTimeSystem => 1192810343,
+        Diff => 60*60*18.5,
+        EndTime => '2007-10-23 10:42:23',
+        EndTimeSystem => 1193128943,
+    },
+# Summertime test - switch back to winter time (+ 60 minutes)
+    {
+        Name => 'Test summertime -> wintertime (+60 min)',
+        StartTime => '2007-10-26 18:12:23',
+        StartTimeSystem => '1193415143',
+        Diff => 60*60*18.5,
+        EndTime => '2007-10-30 10:42:23',
+        EndTimeSystem => 1193737343,
+    },
+# Wintertime test - switch to summer time (without - 60 minutes)
+    {
+        Name => 'Test wintertime -> summertime (prepare without -60 min)',
+        StartTime => '2007-03-16 18:12:23',
+        StartTimeSystem => '1174065143',
+        Diff => 60*60*5.5,
+        EndTime => '2007-03-19 10:42:23',
+        EndTimeSystem => 1174297343,
+    },
+# Wintertime test - switch to summer time (- 60 minutes)
+    {
+        Name => 'Test wintertime -> summertime (-60 min)',
+        StartTime => '2007-03-23 18:12:23',
+        StartTimeSystem => 1174669943,
+        Diff => 60*60*5.5,
+        EndTime => '2007-03-26 10:42:23',
+        EndTimeSystem => 1174898543,
+    },
+# Wintertime test - switch to summer time (without - 60 minutes)
+    {
+        Name => 'Test wintertime -> summertime (prepare without -60 min)',
+        StartTime => '2007-03-16 18:12:23',
+        StartTimeSystem => 1174065143,
+        Diff => 60*60*18.5,
+        EndTime => '2007-03-20 10:42:23',
+        EndTimeSystem => 1174383743,
+    },
+# Wintertime test - switch to summer time (- 60 minutes)
+    {
+        Name => 'Test wintertime -> summertime (-60 min)',
+        StartTime => '2007-03-23 18:12:23',
+        StartTimeSystem => 1174669943,
+        Diff => 60*60*18.5,
+        EndTime => '2007-03-27 10:42:23',
+        EndTimeSystem => 1174984943,
+    },
 );
 
-# Summertime test - switch back to winter time (+- 60 minutes)
-$SystemTime = $Self->{TimeObject}->TimeStamp2SystemTime(
-    String => '2007-10-26 18:12:23',
-);
-$Self->Is(
-    $SystemTime,
-    1193415143,
-    'TimeStamp2SystemTime() - summertime -> wintertime',
-);
+# DestinationTime test
+for my $Test ( @DestinationTime ) {
 
-$DestinationTime = $Self->{TimeObject}->DestinationTime(
-    StartTime => $SystemTime,
-    Time => 60*60*4.5,
-);
+    # get system time
+    my $SystemTimeDestination = $Self->{TimeObject}->TimeStamp2SystemTime(
+        String => $Test->{StartTime},
+    );
 
-$Self->Is(
-    $DestinationTime,
-    1193650943,
-    'DestinationTime() - summertime -> wintertime',
-);
+    # check system time
+    if ( $Test->{StartTimeSystem} ) {
+        $Self->Is(
+            $SystemTimeDestination,
+            $Test->{StartTimeSystem},
+            "TimeStamp2SystemTime() - $Test->{Name}",
+        );
+    }
 
-($Sec, $Min, $Hour, $Day, $Month, $Year) = $Self->{TimeObject}->SystemTime2Date(
-    SystemTime => $DestinationTime,
-);
+    # get system destination time based on calendar settings
+    my $DestinationTime = $Self->{TimeObject}->DestinationTime(
+        StartTime => $SystemTimeDestination,
+        Time => $Test->{Diff},
+    );
 
-$Self->Is(
-    "$Year-$Month-$Day $Hour:$Min:$Sec",
-    '2007-10-29 10:42:23',
-    'SystemTime2Date() - summertime -> wintertime',
-);
+    # check system destination time
+    if ( $Test->{EndTimeSystem} ) {
+        $Self->Is(
+            $DestinationTime,
+            $Test->{EndTimeSystem},
+            "DestinationTime() - $Test->{Name}",
+        );
+    }
+
+    # check time stamp destination time
+    my ($Sec, $Min, $Hour, $Day, $Month, $Year) = $Self->{TimeObject}->SystemTime2Date(
+        SystemTime => $DestinationTime,
+    );
+    $Self->Is(
+        "$Year-$Month-$Day $Hour:$Min:$Sec",
+        $Test->{EndTime},
+        "DestinationTime() - $Test->{Name}",
+    );
+}
 
 # check the vacations
 my $Vacation = '';
